# deployment_monitor

./: .gitignore  Dockerfile  README.md  api.py  config.yaml  db.py  deploy.py  docker-compose.yaml  docker.md  metrics.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
dashboards/: deployments.json
inventories/home/: home.yaml
inventories/test/: test.yaml
playbooks/: file.yaml  folder.yaml
prometheus/: docker-compose.yaml  prometheus.yml  readme.md
