[project]
name = "deployment-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "fastapi>=0.118.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "uvicorn>=0.37.0",
]
